make react + better

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "checkJs": true,
+    "allowJs": true,
+  
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -21,5 +24,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+
   "references": [{ "path": "./tsconfig.node.json" }]
 }
