--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.330.0",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
